# emo

./: Cargo.toml  README.md
src/: main.rs
src/emoji/: build.rs  emoji.txt  mod.rs
src/util/: event.rs  mod.rs
