[package]
name = "emo"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8"
termion = "1.5"
regex = "1"
rand = "0.7"
unicode-width = "0.1"
failure = "0.1"

[[bin]]
name = "emo"
path = "src/main.rs"

[[bin]]
name = "emoji"
path = "src/emoji/build.rs"